issue #5 Das Problem liegt in den "position" der Elemente im Body. Bevor das nicht sauber ist, reicht ein overflow-hidden.

--- a/css/icc.css
+++ b/css/icc.css
@@ -1,3 +1,9 @@
+html,
+body {
+    height: 100%;
+    overflow-y: hidden;
+}
+
 /* Full Page Tabs */
 
 /* Style tab links */
